tests/reject/variableRedeclare.emojic
🏁 🍇
  🍦 z 23
  🍦 z 🔤12345678🔤
🍉
